// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v3 should return a same object 1`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "data": {
              "displayName": "Web-Test",
              "userId": "Web-Test",
            },
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "@Web-Test",
            "type": "mention",
            "version": 1,
          },
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": " hello ",
            "type": "text",
            "version": 1,
          },
          {
            "data": {
              "displayName": "FonTS",
              "userId": "FonTS",
            },
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "@FonTS",
            "type": "mention",
            "version": 1,
          },
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": " ",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;

exports[`v4 should return a same object 1`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "1 ",
            "type": "text",
            "version": 1,
          },
          {
            "data": {
              "displayName": " android2",
              "userId": " android2",
            },
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "@ android2",
            "type": "mention",
            "version": 1,
          },
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": " nstaehunstah ",
            "type": "text",
            "version": 1,
          },
          {
            "data": {
              "displayName": " android2",
              "userId": " android2",
            },
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "@ android2",
            "type": "mention",
            "version": 1,
          },
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": " ",
            "type": "text",
            "version": 1,
          },
          {
            "data": {
              "displayName": "Web-Test",
              "userId": "Web-Test",
            },
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "@Web-Test",
            "type": "mention",
            "version": 1,
          },
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": " aenotuhnasetouhnsateohunsatheunst sntaehuns",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
      {
        "children": [
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "STnseatu ",
            "type": "text",
            "version": 1,
          },
          {
            "data": {
              "displayName": " android3",
              "userId": " android3",
            },
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": "@ android3",
            "type": "mention",
            "version": 1,
          },
          {
            "detail": 0,
            "format": 0,
            "mode": "normal",
            "style": "",
            "text": " ",
            "type": "text",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;

exports[`v4 should return a same object 2`] = `
{
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "detail": 0,
                "format": 0,
                "mode": "normal",
                "style": "",
                "text": "www.google.com",
                "type": "text",
                "version": 1,
              },
            ],
            "direction": "ltr",
            "format": "",
            "indent": 0,
            "rel": null,
            "target": null,
            "title": null,
            "type": "link",
            "url": "http://www.google.com",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
      {
        "children": [
          {
            "children": [
              {
                "detail": 0,
                "format": 0,
                "mode": "normal",
                "style": "",
                "text": "www.youtube.com",
                "type": "text",
                "version": 1,
              },
            ],
            "direction": "ltr",
            "format": "",
            "indent": 0,
            "rel": null,
            "target": null,
            "title": null,
            "type": "link",
            "url": "http://www.youtube.com",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "textFormat": 0,
        "textStyle": "",
        "type": "paragraph",
        "version": 1,
      },
    ],
    "direction": "ltr",
    "format": "",
    "indent": 0,
    "type": "root",
    "version": 1,
  },
}
`;
